[gd_scene load_steps=2 format=3 uid="uid://da4g3uxashjl4"]

[ext_resource type="Script" uid="uid://cnfa2dg4xgcqi" path="res://scenes/build_menu.gd" id="1_07bts"]

[node name="BuildMenu" type="CanvasLayer"]
script = ExtResource("1_07bts")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -29.5
offset_right = 67.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Choose Structure"

[node name="BtnBarracks" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Barracks"

[node name="BtnSmelter" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Smelter"

[node name="BtnCancel" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnBarracks" to="." method="_on_btn_barracks_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnSmelter" to="." method="_on_btn_smelter_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
